ecmascript/parser/tests/test262-error-references/fail/8b1042fbb7c43423.js.stderr
error: Unexpected token Some(LParen). Expected one of yield, an identifier, [ or {
 --> $DIR/tests/test262-parser/fail/8b1042fbb7c43423.js:1:5
  |
1 | var (x)
  |     ^

